plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.8'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'application'  // CDK 실행용
}

group = 'kr.gravy'
version = '0.0.1-SNAPSHOT'
description = 'blind'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// Application plugin: CDK 전용 설정
application {
    mainClass = 'kr.gravy.blind.cdk.BlindInfraApp'
}

// Gradle run 태스크: CDK 출력용 stdout 연결
tasks.named('run') {
    standardOutput = System.out
    errorOutput = System.err
}

// Spring Boot: 메인 클래스 명시적 설정 (BlindApplication)
tasks.named('bootJar') {
    mainClass = 'kr.gravy.blind.BlindApplication'
}

tasks.named('bootRun') {
    mainClass = 'kr.gravy.blind.BlindApplication'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // ===== 개발 도구 (Developer Tools) =====
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ===== Spring Boot 코어 (Spring Boot Core) =====
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Validation: Bean Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // ===== 데이터베이스 - 관계형 (Database - Relational) =====
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Flyway: DB 스키마 버전 관리 및 마이그레이션
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // ===== 데이터베이스 - NoSQL (Database - NoSQL) =====
    // Redis: SSE Emitter 세션 관리, Pub/Sub (실시간 알림)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // ===== 인증/보안 (Authentication & Security) =====
    // JWT: Access Token/Refresh Token 생성 및 검증 (Token Rotation)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // ===== 외부 인프라 (External Infrastructure) =====
    // AWS SDK: S3 (런타임 사용)
    implementation platform('software.amazon.awssdk:bom:2.29.45')
    implementation 'software.amazon.awssdk:s3'

    // AWS CDK: 인프라 프로비저닝 (cdk deploy 실행용)
    implementation 'software.amazon.awscdk:aws-cdk-lib:2.170.0'
    implementation 'software.constructs:constructs:10.3.0'

    // ===== 유틸리티 (Utilities) =====
    // UUID v7 Generator
    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.1'

    // Spring Dotenv: .env 파일 환경 변수 로딩 (로컬 개발용)
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // ===== API 문서화 (API Documentation) =====
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

    // ===== 테스트 (Testing) =====
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
